// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encode operations should create right json for toBuffer 1`] = `
Steps {
  "decodeValue": true,
  "graph": Graph {
    "_internal": Map {
      0 => Array [
        Object {
          "to": 1,
          "type": "input",
        },
      ],
      1 => Array [
        Object {
          "to": 2,
          "type": "input",
        },
      ],
      2 => Array [],
    },
  },
  "inputs": Array [
    FromFile {
      "direction": "in",
      "filename": "test_file.jpg",
      "ioId": 0,
    },
  ],
  "ioID": 2,
  "last": 2,
  "outputs": Array [
    FromBuffer {
      "buffer": null,
      "direction": "out",
      "ioId": 1,
      "key": undefined,
    },
  ],
  "vertex": Array [
    Decode {
      "commands": undefined,
      "io_id": 0,
    },
    Constrain {
      "canvasColor": null,
      "gravity": null,
      "height": 100,
      "hints": null,
      "mode": "within",
      "width": 100,
    },
    Encode {
      "io_id": 1,
      "preset": MozJPEG {
        "isProgressive": undefined,
        "matte": undefined,
        "quality": undefined,
      },
    },
  ],
}
`;

exports[`Encode operations should create right json for toFile 1`] = `
Steps {
  "decodeValue": true,
  "graph": Graph {
    "_internal": Map {
      0 => Array [
        Object {
          "to": 1,
          "type": "input",
        },
      ],
      1 => Array [
        Object {
          "to": 2,
          "type": "input",
        },
      ],
      2 => Array [],
    },
  },
  "inputs": Array [
    FromFile {
      "direction": "in",
      "filename": "test_file.jpg",
      "ioId": 0,
    },
  ],
  "ioID": 2,
  "last": 2,
  "outputs": Array [
    FromFile {
      "direction": "out",
      "filename": "test_output.jpg",
      "ioId": 1,
    },
  ],
  "vertex": Array [
    Decode {
      "commands": undefined,
      "io_id": 0,
    },
    Constrain {
      "canvasColor": null,
      "gravity": null,
      "height": 100,
      "hints": null,
      "mode": "within",
      "width": 100,
    },
    Encode {
      "io_id": 1,
      "preset": MozJPEG {
        "isProgressive": undefined,
        "matte": undefined,
        "quality": undefined,
      },
    },
  ],
}
`;

exports[`Encode operations should create right json for toJpeg 1`] = `
Steps {
  "decodeValue": true,
  "graph": Graph {
    "_internal": Map {
      0 => Array [
        Object {
          "to": 1,
          "type": "input",
        },
      ],
      1 => Array [
        Object {
          "to": 2,
          "type": "input",
        },
      ],
      2 => Array [],
    },
  },
  "inputs": Array [
    FromFile {
      "direction": "in",
      "filename": "test_file.jpg",
      "ioId": 0,
    },
  ],
  "ioID": 2,
  "last": 2,
  "outputs": Array [
    FromFile {
      "direction": "out",
      "filename": "test.jpeg",
      "ioId": 1,
    },
  ],
  "vertex": Array [
    Decode {
      "commands": undefined,
      "io_id": 0,
    },
    Constrain {
      "canvasColor": null,
      "gravity": null,
      "height": 100,
      "hints": null,
      "mode": "within",
      "width": 100,
    },
    Encode {
      "io_id": 1,
      "preset": MozJPEG {
        "isProgressive": undefined,
        "matte": undefined,
        "quality": 90,
      },
    },
  ],
}
`;

exports[`Encode operations should create right json for toPng 1`] = `
Steps {
  "decodeValue": true,
  "graph": Graph {
    "_internal": Map {
      0 => Array [
        Object {
          "to": 1,
          "type": "input",
        },
      ],
      1 => Array [
        Object {
          "to": 2,
          "type": "input",
        },
      ],
      2 => Array [],
    },
  },
  "inputs": Array [
    FromFile {
      "direction": "in",
      "filename": "test_file.jpg",
      "ioId": 0,
    },
  ],
  "ioID": 2,
  "last": 2,
  "outputs": Array [
    FromFile {
      "direction": "out",
      "filename": "test.png",
      "ioId": 1,
    },
  ],
  "vertex": Array [
    Decode {
      "commands": undefined,
      "io_id": 0,
    },
    Constrain {
      "canvasColor": null,
      "gravity": null,
      "height": 100,
      "hints": null,
      "mode": "within",
      "width": 100,
    },
    Encode {
      "io_id": 1,
      "preset": LosslessPNG {
        "maximumDeflate": false,
      },
    },
  ],
}
`;

exports[`Encode operations should create right json for toStream 1`] = `
Steps {
  "decodeValue": true,
  "graph": Graph {
    "_internal": Map {
      0 => Array [
        Object {
          "to": 1,
          "type": "input",
        },
      ],
      1 => Array [
        Object {
          "to": 2,
          "type": "input",
        },
      ],
      2 => Array [],
    },
  },
  "inputs": Array [
    FromFile {
      "direction": "in",
      "filename": "test_file.jpg",
      "ioId": 0,
    },
  ],
  "ioID": 2,
  "last": 2,
  "outputs": Array [
    FromStream {
      "direction": "out",
      "internalStream": null,
      "ioId": 1,
    },
  ],
  "vertex": Array [
    Decode {
      "commands": undefined,
      "io_id": 0,
    },
    Constrain {
      "canvasColor": null,
      "gravity": null,
      "height": 100,
      "hints": null,
      "mode": "within",
      "width": 100,
    },
    Encode {
      "io_id": 1,
      "preset": MozJPEG {
        "isProgressive": undefined,
        "matte": undefined,
        "quality": undefined,
      },
    },
  ],
}
`;

exports[`Encode operations should create right json for toWebp 1`] = `
Steps {
  "decodeValue": true,
  "graph": Graph {
    "_internal": Map {
      0 => Array [
        Object {
          "to": 1,
          "type": "input",
        },
      ],
      1 => Array [
        Object {
          "to": 2,
          "type": "input",
        },
      ],
      2 => Array [],
    },
  },
  "inputs": Array [
    FromFile {
      "direction": "in",
      "filename": "test_file.jpg",
      "ioId": 0,
    },
  ],
  "ioID": 2,
  "last": 2,
  "outputs": Array [
    FromFile {
      "direction": "out",
      "filename": "test.png",
      "ioId": 1,
    },
  ],
  "vertex": Array [
    Decode {
      "commands": undefined,
      "io_id": 0,
    },
    Constrain {
      "canvasColor": null,
      "gravity": null,
      "height": 100,
      "hints": null,
      "mode": "within",
      "width": 100,
    },
    Encode {
      "io_id": 1,
      "preset": WebPLossless {},
    },
  ],
}
`;

exports[`should be throw error if Decode options are called multiple times 1`] = `"duplicate options are not allowed"`;

exports[`should create an array for commands 1`] = `
Array [
  "ignore_color_profile_errors",
  Object {
    "jpeg_downscale_hints": Object {
      "gamma_correct_for_srgb_during_spatial_luma_scaling": true,
      "height": 100,
      "scale_luma_spatially": true,
      "width": 100,
    },
  },
  Object {
    "webp_decoder_hints": Object {
      "height": 100,
      "width": 100,
    },
  },
  "discard_color_profile",
]
`;
